--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ bytebuffer = "2.3.0"
 byteorder = "1.5.0"
 indexmap = "2.9.0"
 inkwell = { version = "0.6.0", features = ["llvm16-0"] }
+zip = "4.2.0"
