--- a/rustc_codegen_jvlm/Cargo.toml
+++ b/rustc_codegen_jvlm/Cargo.toml
@@ -10,6 +10,10 @@ crate-type = ["dylib"]
 
 [build-dependencies]
 toml = "0.8.23"
+wax = "0.6.0"
 
 [package.metadata.rust-analyzer]
 rustc_private = true
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(llvm_enzyme)'] }
