--- a/rustc_codegen_jvlm/Cargo.toml
+++ b/rustc_codegen_jvlm/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-crate-type = ["dylib"]
+crate-type = ["cdylib"]
 
 [dependencies]
+jvlm = { path = "../" }
 
 [build-dependencies]
 cc = "1.2.27"
