--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,14 @@ edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+# Used when compiling for use in rustc
+dynamic-link = [ "llvm-sys/no-llvm-linking" ]
+
 [dependencies]
 bytebuffer = "2.3.0"
 byteorder = "1.5.0"
 indexmap = "2.9.0"
-llvm-sys = { version = "*", features = ["no-llvm-linking"]}
-inkwell = { git = "https://github.com/stevefan1999-personal/inkwell.git", features = ["llvm20-1-force-dynamic"], default-features = false}
+llvm-sys = { version = "*" }
+inkwell = { git = "https://github.com/stevefan1999-personal/inkwell.git", features = ["llvm20-1"], default-features = false}
 zip = "4.2.0"
