--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["rustc_codegen_jvlm"]
+members = [ "crates/java_support_lib","rustc_codegen_jvlm"]
 
 [package]
 name = "jvlm"
